# Agentic_Debate

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
config/: logging_config.json  rate_limits.json  setup.json
docs/: PLAN.md  PLAN2.md  PRD.md  PRD_communication_protocol.md  PRD_debate_engine.md  PRD_gatekeeper.md  TODO.md
prompts/: prompt_log.md
src/: main.py
src/debate/: __init__.py  constants.py
src/debate/agents/: __init__.py  base_agent.py  con_agent.py  judge_agent.py  pro_agent.py
src/debate/commands/: __init__.py  debate_command.md
src/debate/sdk/: __init__.py  sdk.py
src/debate/shared/: __init__.py  budget.py  config.py  gatekeeper.py  ipc.py  logger.py  version.py  watchdog.py
src/debate/skills/: __init__.py  base_skill.py
src/debate/skills/argument_skill/: SKILL.md  argument_skill.py
src/debate/skills/counter_skill/: SKILL.md  counter_skill.py
src/debate/skills/judge_skill/: SKILL.md  judge_skill.py
tests/integration/: test_debate_flow.py  test_watchdog_flow.py
tests/unit/: conftest.py  test_main.py
tests/unit/test_agents/: test_base_agent.py  test_con_agent.py  test_judge_agent.py  test_pro_agent.py  test_sdk.py
tests/unit/test_shared/: __init__.py  test_config.py  test_constants.py  test_gatekeeper.py  test_ipc.py  test_logger.py  test_security.py  test_watchdog.py
tests/unit/test_skills/: __init__.py  test_argument_skill.py  test_base_skill.py  test_counter_skill.py  test_judge_skill.py
